tests/machine/x/cpp/group_by_multi_join.error
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:25: error: no match for ‘operator==’ (operand types are ‘std::any’ and ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’})
  205 |           if (!((n.name == std::string("A"))))
      |                  ~~~~~~ ^~      ~~~~~~~~~~~
      |                    |            |
      |                    std::any     std::string {aka std::__cxx11::basic_string<char>}
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:3:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::__new_allocator<_Tp>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::fpos<_StateT>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::allocator<_CharT>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/string:48:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/string:51:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   mismatched types ‘const _CharT*’ and ‘std::any’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::istreambuf_iterator<_CharT, _Traits>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/map:63,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:4:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::map<_Key, _Tp, _Compare, _Allocator>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/unordered_map:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:7:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:205:43: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
  205 |           if (!((n.name == std::string("A"))))
      |                                           ^
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:21: error: no match for ‘operator==’ (operand types are ‘std::any’ and ‘std::any’)
  219 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 |      std::any
      |                 std::any
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::fpos<_StateT>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::allocator<_CharT>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   mismatched types ‘const _CharT*’ and ‘std::any’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::istreambuf_iterator<_CharT, _Traits>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::map<_Key, _Tp, _Compare, _Allocator>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:219:24: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
  219 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:244:5: error: conversion from ‘vector<Grouped>’ to non-scalar type ‘vector<Filtered>’ requested
  213 |   std::vector<Filtered> grouped = ([&]() {
      |                                   ~~~~~~~~
  214 |     std::vector<__struct5> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  215 |     for (auto x : filtered) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  216 |       auto __key = x.part;
      |       ~~~~~~~~~~~~~~~~~~~~
  217 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  218 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  219 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  220 |           __g.items.push_back(Filtered{x});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  221 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  222 |           break;
      |           ~~~~~~
  223 |         }
      |         ~
  224 |       }
      |       ~
  225 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  226 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  227 |             __struct5{__key, std::vector<Filtered>{Filtered{x}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  228 |       }
      |       ~
  229 |     }
      |     ~
  230 |     std::vector<Grouped> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  231 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  232 |       __items.push_back(Grouped{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  233 |           g.key, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~
  234 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  235 |           })(([&]() {
      |           ~~~~~~~~~~~
  236 |             std::vector<decltype(std::declval<Filtered>().value)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  237 |             for (auto r : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  238 |               __items.push_back(r.value);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  239 |             }
      |             ~
  240 |             return __items;
      |             ~~~~~~~~~~~~~~~
  241 |           })())});
      |           ~~~~~~~~
  242 |     }
      |     ~
  243 |     return __items;
      |     ~~~~~~~~~~~~~~~
  244 |   })();
      |   ~~^~
In file included from /usr/include/c++/13/numeric:62,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:5:
/usr/include/c++/13/bits/stl_numeric.h: In instantiation of ‘_Tp std::accumulate(_InputIterator, _InputIterator, _Tp) [with _InputIterator = __gnu_cxx::__normal_iterator<any*, vector<any> >; _Tp = double]’:
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:234:35:   required from ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = std::vector<std::any>]’
/workspace/mochi/tests/machine/x/cpp/group_by_multi_join.cpp:235:13:   required from here
/usr/include/c++/13/bits/stl_numeric.h:141:46: error: no match for ‘operator+’ (operand types are ‘double’ and ‘std::any’)
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const _CharT*’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const _CharT*’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
